# kryten-economy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _write_config.py  config.example.yaml  config.yaml  pyproject.toml  start-economy.ps1
docs/: FINAL-AUDIT.md  GAMBLING_GAMES_CODE_REVIEW.md  admin-guide.md  config-migration.md  grafana-dashboard.json  kryten-economy-plan.md  plan-krytenEconomy.prompt.md  releasing.md  sprint-01-core-foundation.prompt.md  sprint-02-streaks-milestones-dwell.prompt.md  sprint-03-chat-earning-triggers.prompt.md  sprint-04-gambling.prompt.md  sprint-05-spending-queue-tips-shop.prompt.md  sprint-06-achievements-ranks-progression.prompt.md  sprint-07-events-multipliers-bounties.prompt.md  sprint-08-admin-reporting-visibility.prompt.md  sprint-09-polish-hardening-deploy.prompt.md  user-guide.md
kryten_economy/: __init__.py  __main__.py  achievement_engine.py  admin_scheduler.py  blackjack_engine.py  bounty_manager.py  channel_state.py  command_handler.py  competition_engine.py  config.py  contrast.py  css_vanity.py  database.py  earning_engine.py  event_announcer.py  gambling_common.py  gambling_engine.py  greeting_handler.py  heist_narratives.py  heist_narrator.py  main.py  media_client.py  metrics_collector.py  metrics_server.py  multiplier_engine.py  pm_handler.py  presence_tracker.py  race_engine.py  race_narratives.py  race_narrator.py  rank_engine.py  scheduled_event_manager.py  scheduler.py  spectacle_manager.py  spending_engine.py  trivia_client.py  trivia_engine.py  utils.py
systemd/: kryten-economy.service
tests/: conftest.py  test_achievement_engine.py  test_admin_commands.py  test_admin_inspection.py  test_approvals.py  test_balance_maintenance.py  test_blackjack_engine.py  test_blackout.py  test_bounty_manager.py  test_bridge.py  test_challenge.py  test_channel_state.py  test_chat_triggers.py  (+64 more)
(+1 files in other folders)
